--- a/projetos/jogoDaVelha/src/app/jogo-da-velha/jogo-da-velha.component.css
+++ b/projetos/jogoDaVelha/src/app/jogo-da-velha/jogo-da-velha.component.css
@@ -51,11 +51,11 @@ ul li {
 }
 
 .kz-img-x {
-    background-image: url ('/assets/imagens/x.png')
+    background-image: url('../../assets/imagens/x.png');
 }
 
 .kz-img-o {
-    background-image: url ('/assets/imagens/o.png')
+    background-image: url('../../assets/imagens/o.png');
 }
 
 .kz-cor-vitoria {
